fixed text overflow from post comments

--- a/src/Components/Post/Post.css
+++ b/src/Components/Post/Post.css
@@ -18,7 +18,6 @@
     float: right;
     margin: 10px;
 }
-/* button {
-    border-style: groove;
-    border-radius: 10px;
-} */
+.p {
+    overflow: 'auto'
+}
